--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -110,7 +110,7 @@ jobs:
         envkey_POCKET_NETWORK_CHAIN_HASH: "0002"
         envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
-        envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000000
+        envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
         envkey_POCKET_NETWORK_PROVIDER_TYPE: HTTP
         envkey_POCKET_NETWORK_HTTP_PROVIDER_NODE: https://node1.testnet.pokt.network:443
@@ -121,7 +121,7 @@ jobs:
         envkey_CHECKOUT_MIN_RELAYS_PER_DAY: 433
         envkey_CHECKOUT_MAX_RELAYS_PER_DAY: 6912000
         envkey_CHECKOUT_MIN_VALIDATOR_POWER: 15000
-        envkey_CHECKOUT_MAX_VALIDATOR_POWER: 1666666
+        envkey_CHECKOUT_MAX_VALIDATOR_POWER: 125000
         envkey_CHECKOUT_BASE_RELAY_PER_POKT: 0.12
         envkey_CHECKOUT_STABILITY: 0
         envkey_CHECKOUT_SESSIONS_PER_DAY: 3456
