--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -1,8 +1,8 @@
-name: Production Deployment
+name: Testnet Deployment
 
 on:
   push:
-    branches: [ master ]
+    branches: [ staging ]
 
 jobs:
   build:
@@ -24,22 +24,22 @@ jobs:
       working-directory: frontend
       env:
         GENERATE_SOURCEMAP: false
-        PUBLIC_URL: https://dashboard.pokt.network
-        REACT_APP_BACKEND_URL: https://api.dashboard.pokt.network:4200
+        PUBLIC_URL: https://dashboard.testnet.pokt.network
+        REACT_APP_BACKEND_URL: https://api-testnet.dashboard.pokt.network:4200
         REACT_APP_POCKET_NETWORK_MAX_DISPATCHER: 10
         REACT_APP_POCKET_NETWORK_MAX_SESSIONS: 100
         REACT_APP_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
-        REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.mainnet.pokt.network:443
+        REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443
         REACT_APP_POCKET_NETWORK_TX_FEE: 100000
-        REACT_APP_POCKET_NETWORK_CHAIN_ID: mainnet
+        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet-r2
         REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 25950100000
         REACT_APP_STAKE_DEFAULT_STATUS: Unstaked
         REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 6912000
         REACT_APP_SECURE_LS_SECRET: ${{ secrets.REACT_APP_SECURE_LS_SECRET }}
         REACT_APP_PAYMENT_DEFAULT_CLIENT_ID: ${{ secrets.REACT_APP_PAYMENT_DEFAULT_CLIENT_ID }}
         REACT_APP_RECAPTCHA_CLIENT_KEY: ${{ secrets.REACT_APP_RECAPTCHA_CLIENT_KEY }}
-        REACT_APP_POCKET_FREE_TIER_ACCOUNT: ${{ secrets.REACT_APP_PRODUCTION_POCKET_FREE_TIER_ACCOUNT }}
-        REACT_APP_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE: ${{ secrets.REACT_APP_PRODUCTION_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE }}
+        REACT_APP_POCKET_FREE_TIER_ACCOUNT: ${{ secrets.REACT_APP_TESTNET_POCKET_FREE_TIER_ACCOUNT }}
+        REACT_APP_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE: ${{ secrets.REACT_APP_TESTNET_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE }}
       run: yarn build:prod
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
@@ -81,15 +81,15 @@ jobs:
       uses: SpicyPizza/create-envfile@v1
       with:
         envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
-        envkey_POCKET_NETWORK_MAIN_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_PRODUCTION_MAIN_FUND_ACCOUNT }}
-        envkey_POCKET_NETWORK_MAIN_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_PRODUCTION_MAIN_FUND_ADDRESS }}
-        envkey_POCKET_NETWORK_FREE_TIER_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_PRODUCTION_FREE_TIER_FUND_ACCOUNT }}
-        envkey_POCKET_NETWORK_FREE_TIER_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_PRODUCTION_FREE_TIER_FUND_ADDRESS }}
-        envkey_POCKET_NETWORK_CLIENT_PUB_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PUB_KEY }}
-        envkey_POCKET_NETWORK_CLIENT_PRIV_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PRIV_KEY }}
-        envkey_POCKET_NETWORK_CLIENT_PASSPHRASE: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PASSPHRASE }}
-        envkey_POCKET_NETWORK_APP_PUB_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_PUB_KEY }}
-        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_SIGNATURE }}  
+        envkey_POCKET_NETWORK_MAIN_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_TESTNET_MAIN_FUND_ACCOUNT }}
+        envkey_POCKET_NETWORK_MAIN_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_TESTNET_MAIN_FUND_ADDRESS }}
+        envkey_POCKET_NETWORK_FREE_TIER_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_TESTNET_FREE_TIER_FUND_ACCOUNT }}
+        envkey_POCKET_NETWORK_FREE_TIER_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_TESTNET_FREE_TIER_FUND_ADDRESS }}
+        envkey_POCKET_NETWORK_CLIENT_PUB_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PUB_KEY }}
+        envkey_POCKET_NETWORK_CLIENT_PRIV_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PRIV_KEY }}
+        envkey_POCKET_NETWORK_CLIENT_PASSPHRASE: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PASSPHRASE }}
+        envkey_POCKET_NETWORK_APP_PUB_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_APP_PUB_KEY }}
+        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_TESTNET_APP_SIGNATURE }}  
         envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
         envkey_envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_SECRET }}
@@ -100,7 +100,7 @@ jobs:
         envkey_EMAIL_API_KEY: ${{ secrets.EMAIL_API_KEY }}
         envkey_RECAPTCHA_SERVER_SECRET: ${{ secrets.RECAPTCHA_SERVER_SECRET }}
         envkey_POKT_USD_MARKET_PRICE: ${{ secrets.POKT_USD_MARKET_PRICE }}
-        envkey_DATABASE_NAME: gateway
+        envkey_DATABASE_NAME: gateway-testnet
         envkey_POCKET_NETWORK_MAX_DISPATCHER: 7
         envkey_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
         envkey_POCKET_NETWORK_MAX_SESSIONS: 1000000
@@ -108,16 +108,16 @@ jobs:
         envkey_POCKET_NETWORK_SERVICE_WORKER_DELAYED_START_TIME: 60000
         envkey_POCKET_NETWORK_SERVICE_WORKER_ATTEMPTS: 15
         envkey_POCKET_FREE_TIER_STAKE_AMOUNT: 25950100000
-        envkey_POCKET_NETWORK_DISPATCHERS: https://node1.mainnet.pokt.network:443,https://node2.mainnet.pokt.network:443,https://node3.mainnet.pokt.network:443,https://node4.mainnet.pokt.network:443,https://node5.mainnet.pokt.network:443,https://node6.mainnet.pokt.network:443,https://node7.mainnet.pokt.network:443
-        envkey_POCKET_NETWORK_CHAIN_HASH: "0001"
-        envkey_POCKET_NETWORK_CHAIN_ID: mainnet
+        envkey_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443,https://node2.testnet.pokt.network:443,https://node3.testnet.pokt.network:443,https://node4.testnet.pokt.network:443,https://node5.testnet.pokt.network:443,https://node6.testnet.pokt.network:443,https://node7.testnet.pokt.network:443
+        envkey_POCKET_NETWORK_CHAIN_HASH: "0002"
+        envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
         envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
         envkey_POCKET_NETWORK_PROVIDER_TYPE: HTTP
-        envkey_POCKET_NETWORK_HTTP_PROVIDER_NODE: https://node1.mainnet.pokt.network:443
-        envkey_AUTH_PROVIDER_GITHUB_CALLBACK_URL: https://dashboard.pokt.network/api/auth/provider/github
-        envkey_AUTH_PROVIDER_GOOGLE_CALLBACK_URL: https://dashboard.pokt.network/api/auth/provider/google
+        envkey_POCKET_NETWORK_HTTP_PROVIDER_NODE: https://node1.testnet.pokt.network:443
+        envkey_AUTH_PROVIDER_GITHUB_CALLBACK_URL: https://dashboard.testnet.pokt.network/api/auth/provider/github
+        envkey_AUTH_PROVIDER_GOOGLE_CALLBACK_URL: https://dashboard.testnet.pokt.network/api/auth/provider/google
         envkey_EMAIL_FROM: dashboard@pokt.network
         envkey_CHECKOUT_DEFAULT_CURRENCY: USD
         envkey_CHECKOUT_MIN_RELAYS_PER_DAY: 433
@@ -137,23 +137,23 @@ jobs:
         ECR_REPOSITORY: dashboard
         IMAGE_TAG: latest
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./backend/
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY-testnet:$IMAGE_TAG ./backend/
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY-testnet:$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY-testnet:$IMAGE_TAG"
 
     - name: Fill in the new image ID in the Amazon ECS task definition
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: backend/ecs-task-definition.json
-        container-name: dashboard
+        task-definition: backend/ecs-task-definition-testnet.json
+        container-name: dashboard-testnet
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: dashboard-service
-        cluster: dashboard
+        service: dashboard-testnet-service
+        cluster: dashboard-testnet
         wait-for-service-stability: true
 
