--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -57,7 +57,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
-        DISTRIBUTION_ID: ${{ secrets.DISTRIBUTION_ID }}
+        DISTRIBUTION_ID: ${{ secrets.AWS_PRODUCTION_DISTRIBUTION_ID }}
   deploy:
     name: Backend
     runs-on: ubuntu-latest
