#195; gateway integration for paid plans

--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -38,8 +38,8 @@ jobs:
         REACT_APP_SECURE_LS_SECRET: ${{ secrets.REACT_APP_SECURE_LS_SECRET }}
         REACT_APP_PAYMENT_DEFAULT_CLIENT_ID: ${{ secrets.REACT_APP_PAYMENT_DEFAULT_CLIENT_ID }}
         REACT_APP_RECAPTCHA_CLIENT_KEY: ${{ secrets.REACT_APP_RECAPTCHA_CLIENT_KEY }}
-        REACT_APP_POCKET_FREE_TIER_ACCOUNT: ${{ secrets.REACT_APP_TESTNET_POCKET_FREE_TIER_ACCOUNT }}
-        REACT_APP_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE: ${{ secrets.REACT_APP_TESTNET_POCKET_FREE_TIER_ACCOUNT_PASSPRHASE }}
+        REACT_APP_POCKET_NETWORK_GATEWAY_CLIENT_PUB_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PUB_KEY }}
+        REACT_APP_POCKET_NETWORK_AAT_VERSION: 0.0.1
       run: yarn build:prod
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
