--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "react-bootstrap-table2-overlay": "^2.0.0",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-datepicker": "^2.14.1",
+    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
     "react-google-recaptcha": "^2.0.1",
