--- a/backend/package.json
+++ b/backend/package.json
@@ -115,11 +115,12 @@
   "dependencies": {
     "@babel/runtime": "^7.8.4",
     "@pokt-network/pocket-js": "0.5.8-rc",
-    "@sendgrid/mail": "^7.1.0",
     "@sendgrid/client": "^7.2.0",
+    "@sendgrid/mail": "^7.1.0",
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "big-integer": "^1.6.48",
+    "bull": "^3.14.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -131,8 +132,7 @@
     "nyc": "^15.0.0",
     "pm2": "^4.3.1",
     "query-string": "^6.11.1",
-    "stripe": "^8.33.0",
-    "bull": "^3.14.0"
+    "stripe": "^8.33.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
