updating mainnet node

--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -29,7 +29,7 @@ jobs:
         REACT_APP_POCKET_NETWORK_MAX_DISPATCHER: 10
         REACT_APP_POCKET_NETWORK_MAX_SESSIONS: 24
         REACT_APP_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
-        REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.mainnet.pokt.network:443
+        REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.dashboard.mainnet.pokt.network
         REACT_APP_POCKET_NETWORK_TX_FEE: 10000
         REACT_APP_POCKET_NETWORK_CHAIN_ID: mainnet
         REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 25950100000
