--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -112,7 +112,7 @@ jobs:
         envkey_POCKET_NETWORK_CHAIN_HASH: "0002"
         envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
-        envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000000
+        envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
         envkey_POCKET_NETWORK_PROVIDER_TYPE: HTTP
         envkey_POCKET_NETWORK_HTTP_PROVIDER_NODE: https://node1.testnet.pokt.network:443
