--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -91,7 +91,7 @@ jobs:
         envkey_POCKET_NETWORK_APP_PUB_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_PUB_KEY }}
         envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_SIGNATURE }}  
         envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-        envkey_envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
+        envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_SECRET }}
         envkey_AUTH_PROVIDER_GOOGLE_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_ID }}
         envkey_AUTH_PROVIDER_GOOGLE_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_SECRET }}
@@ -100,6 +100,10 @@ jobs:
         envkey_EMAIL_API_KEY: ${{ secrets.EMAIL_API_KEY }}
         envkey_RECAPTCHA_SERVER_SECRET: ${{ secrets.RECAPTCHA_SERVER_SECRET }}
         envkey_POKT_USD_MARKET_PRICE: ${{ secrets.POKT_USD_MARKET_PRICE }}
+        envkey_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_PRODUCTION_ACCESS_KEY_ID }}
+        envkey_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_PRODUCTION_SECRET_ACCESS_KEY }}
+        envkey_AWS_S3_FTS_BUCKET: ${{ secrets.AWS_PRODUCTION_S3_FTS_BUCKET }}
+        envkey_AWS_REGION: us-west-2
         envkey_DATABASE_NAME: gateway
         envkey_POCKET_NETWORK_MAX_DISPATCHER: 7
         envkey_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
