#328; changing lint config

--- a/backend/package.json
+++ b/backend/package.json
@@ -47,7 +47,7 @@
       "mongo": true
     },
     "rules": {
-      "no-console": "warn",
+      "no-console": "off",
       "comma-spacing": "error",
       "semi": [
         "error",
@@ -57,7 +57,7 @@
         "error",
         "double"
       ],
-      "no-unused-vars": "off",
+      "no-unused-vars": "error",
       "eqeqeq": "error",
       "no-alert": "error",
       "curly": "error",
