#328; changing lint config

--- a/backend/package.json
+++ b/backend/package.json
@@ -57,7 +57,7 @@
         "error",
         "double"
       ],
-      "no-unused-vars": "error",
+      "no-unused-vars": "off",
       "eqeqeq": "error",
       "no-alert": "error",
       "curly": "error",
