--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -81,6 +81,7 @@ jobs:
       uses: SpicyPizza/create-envfile@v1
       with:
         envkey_DATABASE_URL: ${{ secrets.MONGO_TESTNET_DATABASE_URL }}
+        envkey_DATABASE_ENCRYPTION_KEY: ${{ secrets.DATABASE_TESTNET_ENCRYPTION_KEY }}
         envkey_POCKET_NETWORK_MAIN_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_TESTNET_MAIN_FUND_ACCOUNT }}
         envkey_POCKET_NETWORK_MAIN_FUND_ADDRESS: ${{ secrets.POCKET_NETWORK_TESTNET_MAIN_FUND_ADDRESS }}
         envkey_POCKET_NETWORK_FREE_TIER_FUND_ACCOUNT: ${{ secrets.POCKET_NETWORK_TESTNET_FREE_TIER_FUND_ACCOUNT }}
