--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -31,7 +31,7 @@ jobs:
         REACT_APP_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
         REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443
         REACT_APP_POCKET_NETWORK_TX_FEE: 10000
-        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet-r2
+        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet
         REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 25000000000 
         REACT_APP_STAKE_DEFAULT_STATUS: Unstaked
         REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 5000000
@@ -115,7 +115,7 @@ jobs:
         envkey_POCKET_FREE_TIER_STAKE_AMOUNT: 25000000000
         envkey_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443,https://node2.testnet.pokt.network:443,https://node3.testnet.pokt.network:443,https://node4.testnet.pokt.network:443,https://node5.testnet.pokt.network:443,https://node6.testnet.pokt.network:443,https://node7.testnet.pokt.network:443
         envkey_POCKET_NETWORK_CHAIN_HASH: "0002"
-        envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
+        envkey_POCKET_NETWORK_CHAIN_ID: testnet
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
         envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
