--- a/backend/package.json
+++ b/backend/package.json
@@ -126,6 +126,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
+    "express-jwt": "^6.0.0",
     "googleapis": "^48.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
