--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-    
+
     - name: Make envfile
       uses: SpicyPizza/create-envfile@v1
       with:
@@ -90,8 +90,10 @@ jobs:
         envkey_POCKET_NETWORK_CLIENT_PRIV_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PRIV_KEY }}
         envkey_POCKET_NETWORK_CLIENT_PASSPHRASE: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PASSPHRASE }}
         envkey_POCKET_NETWORK_APP_PUB_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_PUB_KEY }}
-        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_SIGNATURE }}  
+        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_PRODUCTION_APP_SIGNATURE }}
         envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+        envkey_JWT_EXPIRATION: 5m
+        envkey_JWT_REFRESH_EXPIRATION: 10m
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_SECRET }}
         envkey_AUTH_PROVIDER_GOOGLE_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_ID }}
