--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -41,6 +41,7 @@ jobs:
         REACT_APP_POCKET_NETWORK_GATEWAY_CLIENT_PUB_KEY: ${{ secrets.POCKET_NETWORK_PRODUCTION_CLIENT_PUB_KEY }}
         REACT_APP_POCKET_NETWORK_AAT_VERSION: 0.0.1
         REACT_APP_SESSION_LENGTH: 3600
+        REACT_APP_POKT_USD_MARKET_PRICE: 0.08
       run: yarn build:prod
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
