--- a/.github/workflows/testnet.yml
+++ b/.github/workflows/testnet.yml
@@ -31,15 +31,17 @@ jobs:
         REACT_APP_POCKET_NETWORK_REQUEST_TIMEOUT: 60000
         REACT_APP_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443
         REACT_APP_POCKET_NETWORK_TX_FEE: 10000
-        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet-r2
-        REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 25000000000 
+        REACT_APP_POCKET_NETWORK_CHAIN_ID: testnet
+        REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 24950100000
         REACT_APP_STAKE_DEFAULT_STATUS: Unstaked
-        REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 5000000
+        REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 5010024
         REACT_APP_SECURE_LS_SECRET: ${{ secrets.REACT_APP_SECURE_LS_SECRET }}
         REACT_APP_PAYMENT_DEFAULT_CLIENT_ID: ${{ secrets.PAYMENT_TESTNET_DEFAULT_CLIENT_ID }}
         REACT_APP_RECAPTCHA_CLIENT_KEY: ${{ secrets.REACT_APP_RECAPTCHA_CLIENT_KEY }}
         REACT_APP_POCKET_NETWORK_GATEWAY_CLIENT_PUB_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PUB_KEY }}
         REACT_APP_POCKET_NETWORK_AAT_VERSION: 0.0.1
+        REACT_APP_SESSION_LENGTH: 600
+        REACT_APP_POKT_USD_MARKET_PRICE: 0.08
       run: yarn build:prod
     - name: Deploy to S3
       uses: jakejarvis/s3-sync-action@master
@@ -76,7 +78,7 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-    
+
     - name: Make envfile
       uses: SpicyPizza/create-envfile@v1
       with:
@@ -90,8 +92,10 @@ jobs:
         envkey_POCKET_NETWORK_CLIENT_PRIV_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PRIV_KEY }}
         envkey_POCKET_NETWORK_CLIENT_PASSPHRASE: ${{ secrets.POCKET_NETWORK_TESTNET_CLIENT_PASSPHRASE }}
         envkey_POCKET_NETWORK_APP_PUB_KEY: ${{ secrets.POCKET_NETWORK_TESTNET_APP_PUB_KEY }}
-        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_TESTNET_APP_SIGNATURE }}  
+        envkey_POCKET_NETWORK_APP_SIGNATURE: ${{ secrets.POCKET_NETWORK_TESTNET_APP_SIGNATURE }}
         envkey_JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+        envkey_JWT_EXPIRATION: 5m
+        envkey_JWT_REFRESH_EXPIRATION: 10m
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_ID }}
         envkey_AUTH_PROVIDER_GITHUB_CLIENT_SECRET: ${{ secrets.AUTH_PROVIDER_GITHUB_CLIENT_SECRET }}
         envkey_AUTH_PROVIDER_GOOGLE_CLIENT_ID: ${{ secrets.AUTH_PROVIDER_GOOGLE_CLIENT_ID }}
@@ -115,7 +119,7 @@ jobs:
         envkey_POCKET_FREE_TIER_STAKE_AMOUNT: 25000000000
         envkey_POCKET_NETWORK_DISPATCHERS: https://node1.testnet.pokt.network:443,https://node2.testnet.pokt.network:443,https://node3.testnet.pokt.network:443,https://node4.testnet.pokt.network:443,https://node5.testnet.pokt.network:443,https://node6.testnet.pokt.network:443,https://node7.testnet.pokt.network:443
         envkey_POCKET_NETWORK_CHAIN_HASH: "0002"
-        envkey_POCKET_NETWORK_CHAIN_ID: testnet-r2
+        envkey_POCKET_NETWORK_CHAIN_ID: testnet
         envkey_POCKET_NETWORK_AAT_VERSION: 0.0.1
         envkey_POCKET_NETWORK_TRANSACTION_FEE: 10000
         envkey_POCKET_FREE_TIER_MAX_RELAY_PER_DAY_AMOUNT: 10000000
@@ -125,8 +129,9 @@ jobs:
         envkey_AUTH_PROVIDER_GOOGLE_CALLBACK_URL: https://dashboard.testnet.pokt.network/api/auth/provider/google
         envkey_EMAIL_FROM: dashboard@pokt.network
         envkey_CHECKOUT_DEFAULT_CURRENCY: USD
-        envkey_CHECKOUT_MIN_RELAYS_PER_DAY: 433
-        envkey_CHECKOUT_MAX_RELAYS_PER_DAY: 5000000
+        envkey_CHECKOUT_MAX_USD_VALUE: 10000
+        envkey_CHECKOUT_MIN_RELAYS_PER_DAY: 504
+        envkey_CHECKOUT_MAX_RELAYS_PER_DAY: 5010024
         envkey_CHECKOUT_MIN_VALIDATOR_POWER: 15500
         envkey_CHECKOUT_MAX_VALIDATOR_POWER: 125000
         envkey_CHECKOUT_BASE_RELAY_PER_POKT: 1.67
