--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,11 @@
     "test:models": "mocha test/models",
     "lint": "eslint ."
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
+  },
   "babel": {
     "presets": [
       "@babel/preset-env"
@@ -114,19 +119,21 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
-    "@pokt-network/pocket-js": "0.5.8-rc",
+    "@pokt-network/pocket-js": "0.6.1-rc",
     "@sendgrid/client": "^7.2.0",
     "@sendgrid/mail": "^7.1.0",
     "aws-sdk": "^2.727.1",
     "axios": "^0.19.2",
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "big-integer": "^1.6.48",
     "bull": "^3.14.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.1",
+    "express-jwt": "^6.0.0",
     "googleapis": "^48.0.0",
+    "husky": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.4",
     "morgan": "^1.9.1",
@@ -134,7 +141,9 @@
     "pm2": "^4.3.1",
     "query-string": "^6.11.1",
     "stripe": "^8.33.0",
-    "strong-cryptor": "^2.2.0"
+    "strong-cryptor": "^2.2.0",
+    "uuid": "^8.3.0",
+    "numeral": "^2.0.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
@@ -153,7 +162,7 @@
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-jsdoc": "^22.1.0",
-    "mocha": "^7.1.0",
+    "mocha": "^8.1.3",
     "sinon": "^9.0.1",
     "subpackage": "^1.1.0",
     "webpack": "^4.41.6",
