--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@pokt-network/pocket-js": "0.5.8-rc",
+    "@pokt-network/pocket-js": "0.6.1-rc",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -25,6 +25,7 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "formik": "^2.1.4",
+    "husky": "^4.3.0",
     "identicon.js": "^2.3.3",
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
@@ -52,6 +53,11 @@
     "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
     "yup": "^0.28.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "eslintConfig": {
     "env": {
