--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,8 +50,10 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.1",
+    "react-spring": "^8.0.27",
     "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
+    "use-viewport": "^0.2.0",
     "yup": "^0.28.5"
   },
   "husky": {
@@ -137,7 +139,7 @@
     "node-sass": "^4.13.1"
   },
   "scripts": {
-    "start": "PORT=80 BROWSER=none node_modules/.bin/react-scripts --max_old_space_size=8192 start",
+    "start": "node_modules/.bin/react-scripts --max_old_space_size=8192 start",
     "build": "node_modules/.bin/react-scripts build",
     "build:prod": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 node_modules/.bin/react-scripts build --prod",
     "test": "node_modules/.bin/react-scripts test",
