--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -34,7 +34,7 @@ jobs:
         REACT_APP_POCKET_NETWORK_CHAIN_ID: mainnet
         REACT_APP_POCKET_FREE_TIER_STAKE_AMOUNT: 25000000000
         REACT_APP_STAKE_DEFAULT_STATUS: Unstaked
-        REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 5010000
+        REACT_APP_DEFAULT_MAX_RELAYS_PER_DAY: 801000
         REACT_APP_SECURE_LS_SECRET: ${{ secrets.REACT_APP_SECURE_LS_SECRET }}
         REACT_APP_PAYMENT_DEFAULT_CLIENT_ID: ${{ secrets.PAYMENT_PRODUCTION_DEFAULT_CLIENT_ID }}
         REACT_APP_RECAPTCHA_CLIENT_KEY: ${{ secrets.REACT_APP_RECAPTCHA_CLIENT_KEY }}
