--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,9 +63,11 @@
   },
   "devDependencies": {
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^5.2.0",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "node-sass": "^4.13.1"
   },
   "scripts": {
