--- a/backend/package.json
+++ b/backend/package.json
@@ -84,8 +84,10 @@
     "debug": "^2.6.9",
     "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-jsdoc": "^31.6.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "mocha": "^8.1.3",
     "sinon": "^9.0.1",
     "subpackage": "^1.1.0",
