--- a/backend/package.json
+++ b/backend/package.json
@@ -89,6 +89,7 @@
     "eslint-plugin-jsdoc": "^31.6.0",
     "eslint-plugin-prettier": "^3.3.1",
     "mocha": "^8.1.3",
+    "prettier": "^2.2.1",
     "sinon": "^9.0.1",
     "subpackage": "^1.1.0",
     "webpack": "^4.41.6",
