--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,7 +68,8 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
-    "node-sass": "^4.13.1"
+    "node-sass": "^4.13.1",
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "start": "node_modules/.bin/react-scripts --max_old_space_size=8192 start",
