--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "url": "https://github.com/pokt-network/pocket-dashboard",
     "type": "git"
   },
-  "author": "Codemera",
+  "author": "Pocket Network",
   "license": "MIT",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
@@ -61,7 +61,17 @@
       "pre-commit": "yarn lint"
     }
   },
+  "bundlewatch": {
+    "files": [
+      {
+        "path": "public/*.js",
+        "maxSize": "1600kb",
+        "compression": "gzip"
+      }
+    ]
+  },
   "devDependencies": {
+    "bundlewatch": "^0.3.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-config-react-app": "^5.2.0",
@@ -80,11 +90,7 @@
     "lint": "eslint src/"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
