--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,6 +71,12 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/node-logger": "^6.1.17",
+    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/react": "^6.1.17",
     "bundlewatch": "^0.3.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^7.2.0",
@@ -87,7 +93,9 @@
     "build:prod": "GENERATE_SOURCEMAP=false NODE_OPTIONS=--max_old_space_size=8192 node_modules/.bin/react-scripts build --prod",
     "test": "node_modules/.bin/react-scripts test",
     "eject": "node_modules/.bin/react-scripts eject",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "browserslist": {
     "production": [">0.2%", "not dead", "not op_mini all"],
