--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@pokt-network/pocket-js": "0.6.3-rc",
+    "@sentry/react": "^6.1.0",
+    "@sentry/tracing": "^6.1.0",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -71,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@sentry/webpack-plugin": "^1.14.0",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
     "@storybook/addon-links": "^6.1.17",
@@ -98,7 +101,11 @@
     "build-storybook": "build-storybook -s public"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
