--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "big-integer": "^1.6.48",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
@@ -55,6 +56,8 @@
     "react-spring": "^8.0.27",
     "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
+    "styled-components": "^5.2.1",
+    "use-inside": "^0.2.0",
     "use-viewport": "^0.2.0",
     "yup": "^0.28.5"
   },
