--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
     "numeral": "^2.0.6",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "rc-slider": "9.2.4",
