--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -77,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/react": "^4.1.1",
     "@sentry/webpack-plugin": "^1.14.0",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
