--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "babel-plugin-styled-components": "^1.12.0",
     "big-integer": "^1.6.48",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
@@ -32,6 +33,7 @@
     "lodash": "^4.17.19",
     "moment": "^2.25.3",
     "numeral": "^2.0.6",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.4",
     "rc-slider": "9.2.4",
@@ -55,6 +57,8 @@
     "react-spring": "^8.0.27",
     "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
+    "styled-components": "^5.2.1",
+    "use-inside": "^0.2.0",
     "use-viewport": "^0.2.0",
     "yup": "^0.28.5"
   },
@@ -73,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/react": "^4.1.1",
     "@sentry/webpack-plugin": "^1.14.0",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
