chore: fix routes, slim dependencies down

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,58 +9,27 @@
   "author": "Pocket Network",
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.27",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-regular-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "@fortawesome/react-fontawesome": "^0.1.9",
     "@pokt-network/pocket-js": "0.6.3-rc",
     "@sentry/react": "^6.1.0",
     "@sentry/tracing": "^6.1.0",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.3.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
     "babel-plugin-styled-components": "^1.12.0",
-    "big-integer": "^1.6.48",
-    "bootstrap": "^4.4.1",
-    "classnames": "^2.2.6",
-    "formik": "^2.1.4",
     "husky": "^4.3.0",
-    "identicon.js": "^2.3.3",
-    "lodash": "^4.17.19",
-    "moment": "^2.25.3",
-    "numeral": "^2.0.6",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
-    "qs": "^6.9.4",
-    "rc-slider": "9.2.4",
-    "rc-steps": "^3.5.0",
-    "rc-tooltip": "3.7.3",
     "react": "^16.13.0",
-    "react-bootstrap": "^1.0.0-beta.17",
-    "react-bootstrap-table-next": "^4.0.0",
-    "react-bootstrap-table2-overlay": "^2.0.0",
-    "react-bootstrap-table2-paginator": "^2.1.2",
-    "react-datepicker": "^2.14.1",
-    "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.0",
     "react-dropzone": "10.2.2",
-    "react-google-recaptcha": "^2.0.1",
-    "react-infinite-scroller": "^1.2.4",
-    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-spinners": "^0.8.1",
     "react-spring": "^8.0.27",
-    "react-to-print": "^2.9.0",
     "secure-ls": "^1.2.6",
     "styled-components": "^5.2.1",
     "use-inside": "^0.2.0",
-    "use-viewport": "^0.2.0",
-    "yup": "^0.28.5"
+    "use-viewport": "^0.2.0"
   },
   "husky": {
     "hooks": {
