--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,8 @@
   "author": "Pocket Network",
   "license": "MIT",
   "dependencies": {
+    "@fontsource/inter": "^4.2.1",
+    "@fontsource/source-code-pro": "^4.2.1",
     "@pokt-network/pocket-js": "0.6.3-rc",
     "@sentry/react": "^6.1.0",
     "@sentry/tracing": "^6.1.0",
