--- a/packages/frontend/.prettierrc
+++ b/packages/frontend/.prettierrc
@@ -3,6 +3,5 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": false,
-  "bracketSpacing": true,
-  "printWidth": 80
+  "bracketSpacing": true
 }
