chore: move filepath for serving files at root for IPFS

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "pocket-dashboard",
   "version": "1.0.0",
   "description": "Pocket dashboard",
+  "homepage": "./",
   "repository": {
     "url": "https://github.com/pokt-network/pocket-dashboard",
     "type": "git"
