Frontend: Implement basic structure & foundation for views (#616)
* chore: fix font loading issue

* feat: login, signup screens and checkbox, field components

* chore: move sentry setup to its own dedicated file

* feat: forgot password / correct signup screens

* chore: move filepath for serving files at root for IPFS

* feat: basic dashboard view structure, network status view

* feat: basic, unwired menu panel, views

* fix: increase react-axe throttle time to avoid laggy UI in dev

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "pocket-dashboard",
   "version": "1.0.0",
   "description": "Pocket dashboard",
+  "homepage": "./",
   "repository": {
     "url": "https://github.com/pokt-network/pocket-dashboard",
     "type": "git"
@@ -9,6 +10,8 @@
   "author": "Pocket Network",
   "license": "MIT",
   "dependencies": {
+    "@fontsource/inter": "^4.2.1",
+    "@fontsource/source-code-pro": "^4.2.1",
     "@pokt-network/pocket-js": "0.6.3-rc",
     "@sentry/react": "^6.1.0",
     "@sentry/tracing": "^6.1.0",
